style: fix links collapsing on smaller viewports

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -17,6 +17,8 @@ footer {
     .links-container {
         ul {
             display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: var(--spacing-medium);
 
             li {
